--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" th:href="@{../css/styles.css}"/>
     <div id="reportsFormDivId" name="reportsFormDivName" th:fragment="reports-form" xmlns:th="http://www.thymeleaf.org"
          th:remove="tag">
-        <form id="reports-form" name="reports-form" class="form-horizontal" action="#"
+        <form id="reports-form" name="reports-form" class="form-horizontal"
               th:action="@{/reports}"
               th:object="${reportsForm}" method="post">
+            <input type="hidden"  th:name="${_csrf.parameterName}"   th:value="${_csrf.token}"/>
             <fieldset>
                 <div role="tabpanel" class="tab-pane" id="recapreports">
                     <!-- Reports Form Section-->
