--- a/src/main/resources/templates/userRolesSearch.html
+++ b/src/main/resources/templates/userRolesSearch.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" th:href="@{../css/bootstrap-multiselect.css}"/>
     <link rel="stylesheet" th:href="@{../css/select-step.css}"/>
     <script type="text/javascript" th:src="@{../js/userRole.js}"></script>
-    <div id="userRolesFormDivId" name="userRolesFormDivName" th:fragment="userRole-form"
-         xmlns:th="http://www.thymeleaf.org" th:remove="tag">
-        <form id="userRole-form" name="userRole-form" class="form-horizontal" action="#"
+    <div id="userRolesFormDivId" name="userRolesFormDivName" th:fragment="userRole-form" xmlns:th="http://www.thymeleaf.org" th:remove="tag">
+        <form id="userRole-form" name="userRole-form" class="form-horizontal"
               th:action="@{/userRoles}"
               th:object="${userRoleForm}" method="post">
+            <input type="hidden"  th:name="${_csrf.parameterName}"   th:value="${_csrf.token}"/>
             <fieldset>
                 <input type="text" id="editUserIdHidden" th:field="${userRoleForm.userId}" hidden="hidden"/>
                 <div role="tabpanel" class="tab-pane" id="recapusers">
