--- a/src/main/resources/templates/roles.html
+++ b/src/main/resources/templates/roles.html
@@ -17,9 +17,10 @@
     <link rel="stylesheet" th:href="@{../css/select-step.css}"/>
     <div xmlns:th="http://www.thymeleaf.org" id="rolesFormDivId" name="rolesFormDivName" th:fragment="roles-form"
          th:remove="tag">
-        <form id="roles-form" name="roles-form" class="form-horizontal" action="#"
+        <form id="roles-form" name="roles-form" class="form-horizontal"
               th:action="@{/roles}"
               th:object="${rolesForm}" method="post">
+            <input type="hidden"  th:name="${_csrf.parameterName}"   th:value="${_csrf.token}"/>
             <fieldset>
                 <div role="tabpanel" class="tab-pane" id="recaprole">
                     <div id="role-searchview" class="roles-main-section">
