--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -6,9 +6,10 @@
     <script type="text/javascript" th:src="@{../js/search.js}"></script>
     <script type="text/javascript" th:src="@{../js/bootstrap-add-clear.min.js}"></script>
     <div id="searchFormDivId" name="searchFormDivName" th:fragment="search-form" xmlns:th="http://www.thymeleaf.org" th:remove="tag">
-        <form id="search-form" name="search-form" class="form-horizontal" action="#"
+        <form id="search-form" name="search-form" class="form-horizontal"
               th:action="@{/search}"
               th:object="${searchRecordsRequest}" method="post">
+            <input type="hidden"  th:name="${_csrf.parameterName}"   th:value="${_csrf.token}"/>
             <fieldset>
                 <div class="search-bar">
                     <div class="row margin-0">
